--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm-start": "^1.4.2",
     "opusscript": "0.0.7",
     "sqlite3": "^5.0.0",
-    "ytdl-core": "^3.2.2"
+    "ytdl-core": "^3.2.2",
+    "ytpl": "^0.3.0"
   }
 }
