--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
     "ffmpeg-static": "^4.2.5",
+    "node-gyp": "^7.1.0",
+    "npm": "^6.14.8",
     "npm-install": "^1.4.1",
     "npm-start": "^1.4.2",
     "opusscript": "0.0.7",
