--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
     "ffmpeg-static": "^4.2.5",
+    "google-spreadsheet": "^3.0.13",
     "googleapis": "^59.0.0",
     "node-gyp": "^7.1.0",
     "npm": "^6.14.8",
