--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "discord-ytdl-core": "^4.1.5",
     "discord.js": "^12.2.0",
     "ffmpeg-static": "^4.2.5",
     "google-spreadsheet": "^3.0.13",
