Initialization of 4.1.X-alphaX builds

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cron": "^1.8.2",
     "discord-ytdl-core": "^4.1.5",
     "discord.js": "^12.2.0",
-    "ffmpeg-static": "^4.2.5",
+    "ffmpeg-static": "^4.2.7",
+    "fs-extra": "^9.1.0",
     "google-spreadsheet": "^3.1.15",
     "googleapis": "^59.0.0",
     "node-gyp": "^7.1.0",
@@ -24,6 +25,7 @@
     "opusscript": "0.0.7",
     "sqlite3": "^5.0.0",
     "ytdl-core": "^3.4.2",
+    "ytdl-core-discord": "^1.2.5",
     "ytpl": "^0.3.0"
   }
 }
