--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "cron": "^1.8.2",
+    "db": "^3.3.1",
     "discord-spdl-core": "^1.0.2",
     "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "fs-extra": "^9.1.0",
     "google-spreadsheet": "^3.1.15",
