--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cron": "^1.8.2",
     "db": "^3.3.1",
     "discord-spdl-core": "^1.0.2",
-    "discord.js": "^12.5.3",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "fs-extra": "^9.1.0",
@@ -27,9 +27,7 @@
     "spdl-core": "^1.6.0",
     "sqlite3": "^5.0.0",
     "ytdl-core": "^3.4.2",
+    "ytdl-core-discord": "^1.2.5",
     "ytpl": "^0.3.0"
-  },
-  "devDependencies": {
-    "ytdl-core-discord": "^1.3.0"
   }
 }
