--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "discordbotz",
-  "version": "1.5.23",
+  "version": "1.5.24",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "semistandard && node my-normal-tests-littered-with-semicolons.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,5 +29,9 @@
     "ytdl-core": "^3.4.2",
     "ytdl-core-discord": "^1.2.5",
     "ytpl": "^0.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.24.0",
+    "semistandard": "*"
   }
 }
