--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "discordbotz",
-  "version": "1.5.29",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "semistandard && node my-normal-tests-littered-with-semicolons.js"
+    "test": "semistandard && node my-normal-tests-littered-with-semicolons.js",
+    "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "npm-install": "^1.4.1",
     "npm-start": "^1.4.2",
     "npm-start-command": "^1.0.1",
+    "pm2": "^4.5.6",
     "spdl-core": "^1.6.0",
     "sqlite3": "^5.0.0",
     "ytdl-core": "^3.4.2",
