--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "discordbotz",
-  "version": "2.0.5",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "semistandard && node my-normal-tests-littered-with-semicolons.js",
-    "start": "pm2-runtime start ecosystem.config.js --env production"
+    "test": "semistandard && node my-normal-tests-littered-with-semicolons.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
-    "cron": "^1.8.2",
-    "db": "^3.3.1",
-    "discord-spdl-core": "^1.0.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
@@ -25,12 +21,11 @@
     "npm-install": "^1.4.1",
     "npm-start": "^1.4.2",
     "npm-start-command": "^1.0.1",
-    "pm2": "^4.5.6",
     "spdl-core": "^1.6.0",
-    "sqlite3": "^5.0.0",
     "ytdl-core": "^3.4.2",
     "ytdl-core-discord": "^1.2.5",
-    "ytpl": "^0.3.0"
+    "ytpl": "^0.3.0",
+    "ytsr": "^3.5.0"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
