--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "npm-install": "^1.4.1",
     "npm-start": "^1.4.2",
     "npm-start-command": "^1.0.1",
-    "spdl-core": "^1.6.0",
+    "spdl-core": "~1.6.0",
     "ytdl-core": "^3.4.2",
     "ytdl-core-discord": "^1.2.5",
     "ytpl": "^0.3.0",
