--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "npm-start": "^1.4.2",
     "npm-start-command": "^1.0.1",
     "spdl-core": "~1.6.0",
+    "spotify-url-info": "^2.2.0",
     "ytdl-core": "^4.7.0",
     "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1",
