--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "4.1.6",
+  "version": "4.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "dotenv": "^9.0.0",
     "ffmpeg-static": "^4.3.0",
     "fs-extra": "^10.0.0",
+    "genius-lyrics": "^4.2.9",
     "googleapis": "^73.0.0",
     "node-gyp": "^8.0.0",
     "npm": "^7.12.1",
