--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "4.3.0",
+  "version": "4.3.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "npm-install": "^1.7.4",
     "npm-start": "^1.4.2",
     "npm-start-command": "^1.0.1",
-    "spdl-core": "~1.7.0",
+    "spdl-core": "^2.0.2",
     "spotify-url-info": "^2.2.3",
     "ytdl-core": "^4.8.0",
     "ytdl-core-discord": "^1.3.0",
