--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "4.3.2",
+  "version": "4.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "npm-start-command": "^1.0.1",
     "spdl-core": "^2.0.2",
     "spotify-url-info": "^2.2.3",
+    "xml2js": "^0.4.23",
     "ytdl-core": "^4.8.0",
     "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1",
