--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.4.12",
+  "version": "5.5.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,8 @@
     "spdl-core": "^2.0.2",
     "spotify-url-info": "^2.2.3",
     "xml2js": "^0.4.23",
-    "ytdl-core-discord": "^1.3.0",
+    "ytdl-core": "^4.8.2",
+    "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.2.1",
     "ytsr": "^3.5.0"
   },
