--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.5.6",
+  "version": "5.5.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.3.0",
+    "fs": "^0.0.1-security",
     "fs-extra": "^10.0.0",
     "genius-lyrics": "^4.2.9",
     "googleapis": "^76.0.0",
