--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.17.1",
+  "version": "5.17.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,12 @@
     "@discordjs/opus": "^0.6.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "ffmpeg": "^0.0.4",
     "genius-lyrics": "^4.2.9",
     "googleapis": "^87.0.0",
     "node-gyp": "^8.2.0",
     "npm": "^7.23.0",
+    "opusscript": "^0.0.8",
     "spdl-core": "^2.0.2",
     "spotify-url-info": "^2.2.3",
     "xml2js": "^0.4.23",
