--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.17.2",
+  "version": "5.17.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,10 +13,11 @@
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.4.0",
     "genius-lyrics": "^4.2.9",
     "googleapis": "^87.0.0",
     "node-gyp": "^8.2.0",
-    "npm": "^7.23.0",
+    "npm": "^7.24.1",
     "opusscript": "^0.0.8",
     "spdl-core": "^2.0.2",
     "spotify-url-info": "^2.2.3",
