--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "discordbotz",
-  "version": "5.19.15",
+  "version": "5.20.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "node ./src/index.js",
     "test": "semistandard && node my-normal-tests-littered-with-semicolons.js"
   },
   "engines": {
