--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "discordbotz",
-  "version": "5.20.2",
-  "description": "",
+  "version": "5.20.3",
+  "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
     "test": "semistandard && node my-normal-tests-littered-with-semicolons.js"
   },
   "engines": {
-    "node": ">=16.10.0"
+    "node": ">=16.11.0"
   },
   "author": "",
   "license": "ISC",
