--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.24.6",
+  "version": "5.24.7",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "ytsr": "^3.5.3"
   },
   "devDependencies": {
-    "semistandard": "*"
+    "semistandard": "*",
+    "jest": "^27.3.1"
   }
 }
