--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.25.5",
+  "version": "5.25.6",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "jest": "^27.3.1",
-    "semistandard": "*"
+    "semistandard": "*",
+    "twitch-m3u8": "^1.1.4",
+    "m3u8stream": "^0.8.4"
   }
 }
