--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.25.7",
+  "version": "5.26.0",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -20,12 +20,14 @@
     "ffmpeg-static": "^4.4.0",
     "genius-lyrics": "^4.3.4",
     "googleapis": "^89.0.0",
+    "m3u8stream": "^0.8.4",
     "node-gyp": "^8.3.0",
     "opusscript": "^0.0.8",
     "soundcloud-downloader": "^1.0.0",
     "scdl-core": "^1.0.19",
     "spdl-core": "^2.0.2",
     "spotify-url-info": "^2.2.3",
+    "twitch-m3u8": "^1.1.4",
     "xml2js": "^0.4.23",
     "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.1",
@@ -34,8 +36,6 @@
   },
   "devDependencies": {
     "jest": "^27.3.1",
-    "semistandard": "*",
-    "twitch-m3u8": "^1.1.4",
-    "m3u8stream": "^0.8.4"
+    "semistandard": "*"
   }
 }
