--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.28.8",
+  "version": "5.28.9",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "spotify-url-info": "^2.2.3",
     "twitch-m3u8": "^1.1.4",
     "unpipe": "^1.0.0",
+    "wtfnode": "^0.9.1",
     "xml2js": "^0.4.23",
     "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.1",
