--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "5.28.12",
+  "version": "5.28.13",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -21,7 +21,8 @@
     "genius-lyrics": "^4.3.4",
     "googleapis": "^91.0.0",
     "m3u8stream": "^0.8.4",
-    "node-gyp": "^8.3.0",
+    "node-gyp": "^8.4.0",
+    "node-os-utils": "^1.3.5",
     "opusscript": "^0.0.8",
     "scdl-core": "^1.0.19",
     "soundcloud-downloader": "^1.0.0",
@@ -29,7 +30,6 @@
     "spotify-url-info": "^2.2.3",
     "twitch-m3u8": "^1.1.4",
     "unpipe": "^1.0.0",
-    "wtfnode": "^0.9.1",
     "xml2js": "^0.4.23",
     "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.1",
