--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
+    "dev": "node ./src/index.js --dev",
     "test": "jest --detectOpenHandles"
   },
   "engines": {
