--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "node --trace-warnings ./src/index.js --dev",
+    "pm2": "pm2 start src/index.js --name index",
     "test": "jest --detectOpenHandles"
   },
   "engines": {
