--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "node --trace-warnings ./src/index.js --dev",
-    "pm2": "pm2 start src/index.js --watch --name index",
+    "pm2": "echo running pm2 script...\npm2 start src/index.js --watch --name index",
     "test": "jest --detectOpenHandles"
   },
   "engines": {
