--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "~0.6.0",
+    "@discordjs/voice": "^0.10.0",
     "discord.js": "^13.8.0",
     "dotenv": "^10.0.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
     "genius-lyrics": "^4.3.8",
     "googleapis": "^100.0.0",
+    "libsodium": "^0.7.10",
     "m3u8stream": "^0.8.6",
     "node-gyp": "^8.4.1",
     "node-os-utils": "^1.3.6",
     "opusscript": "^0.0.8",
+    "play-dl": "^1.9.5",
     "scdl-core": "^1.0.20",
     "soundcloud-downloader": "^1.0.0",
     "spotify-url-info": "~2.2.9",
