--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "genius-lyrics": "^4.3.8",
     "googleapis": "^100.0.0",
     "libsodium": "^0.7.10",
+    "libsodium-wrappers": "^0.7.10",
     "m3u8stream": "^0.8.6",
     "node-gyp": "^8.4.1",
     "node-os-utils": "^1.3.6",
