--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "~0.6.0",
+    "@discordjs/opus": "^0.7.0",
     "@discordjs/voice": "^0.10.0",
     "discord.js": "^13.8.0",
     "dotenv": "^10.0.0",
