--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@discordjs/opus": "^0.7.0",
     "@discordjs/voice": "^0.10.0",
-    "discord.js": "^13.8.0",
+    "discord.js": "^13.8.1",
     "dotenv": "^10.0.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
     "genius-lyrics": "^4.3.8",
-    "googleapis": "^100.0.0",
+    "googleapis": "^104.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "libsodium": "^0.7.10",
     "libsodium-wrappers": "^0.7.10",
     "m3u8stream": "^0.8.6",
@@ -32,7 +33,7 @@
     "play-dl": "^1.9.5",
     "scdl-core": "^1.0.20",
     "soundcloud-downloader": "^1.0.0",
-    "spotify-url-info": "~2.2.9",
+    "spotify-url-info": "^3.1.2",
     "twitch-m3u8": "^1.1.5",
     "unpipe": "^1.0.0",
     "xml2js": "^0.4.23",
