--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-os-utils": "^1.3.6",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.5",
+    "request": "^2.88.2",
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
     "spotify-url-info": "^3.1.2",
