chore(deps): add fluent-ffmpeg

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
+    "fluent-ffmpeg": "^2.1.2",
     "genius-lyrics": "^4.3.8",
     "googleapis": "^104.0.0",
     "isomorphic-unfetch": "^3.1.0",
