--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "ytsr": "^3.8.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.2",
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
     "jest": "^27.5.1",
     "semistandard": "*"
   }
