--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "7.1.6",
+  "version": "7.1.7",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "node-gyp": "^8.4.1",
     "node-os-utils": "^1.3.6",
     "opusscript": "^0.0.8",
+    "package-lock-only": "^0.0.4",
     "play-dl": "^1.9.5",
     "request": "^2.88.2",
     "scdl-core": "^1.1.0",
