--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "7.1.8",
+  "version": "7.1.9",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -40,7 +40,7 @@
     "twitch-m3u8": "^1.1.5",
     "unpipe": "^1.0.0",
     "xml2js": "^0.4.23",
-    "ytdl-core": "^4.11.0",
+    "ytdl-core": "~4.9.2",
     "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.3.0",
     "ytsr": "^3.8.0"
