--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.11.0",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^13.10.3",
     "dotenv": "^16.0.2",
     "ffmpeg": "^0.0.4",
