--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "genius-lyrics": "^4.4.0",
     "googleapis": "^108.0.0",
     "isomorphic-unfetch": "^3.1.0",
+    "leven": "~3.1.0",
     "libsodium": "^0.7.10",
     "libsodium-wrappers": "^0.7.10",
     "m3u8stream": "^0.8.6",
