--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@discordjs/voice": "^0.11.0",
+    "@discordjs/opus": "~0.8.0",
+    "@discordjs/voice": "^0.13.0",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.6.0",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
     "fluent-ffmpeg": "^2.1.2",
     "genius-lyrics": "^4.4.0",
-    "googleapis": "^108.0.0",
+    "googleapis": "^108.0.1",
     "isomorphic-unfetch": "^3.1.0",
     "leven": "~3.1.0",
     "libsodium": "^0.7.10",
     "libsodium-wrappers": "^0.7.10",
     "m3u8stream": "^0.8.6",
-    "node-gyp": "^8.4.1",
+    "node-gyp": "^9.3.0",
     "node-os-utils": "^1.3.7",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.5",
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
-    "spotify-url-info": "^3.1.8",
+    "spotify-url-info": "^3.1.9",
     "twitch-m3u8": "^1.1.5",
     "unpipe": "^1.0.0",
     "xml2js": "^0.4.23",
