--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordbotz",
-  "version": "8.0.9",
+  "version": "8.2.0",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "pm2": "echo running pm2 script...\npm2 start src/index.js --watch --name vibe",
     "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
-    "format": "npx eslint src/ --fix"
+    "format": "npx eslint src/ --fix",
+    "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit status"
   },
   "engines": {
     "node": ">=18.x"
