--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pm2": "echo running pm2 script...\npm2 start src/index.js --watch --name vibe",
     "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
+    "lint": "npx eslint src/",
     "format": "npx eslint src/ --fix",
     "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit status"
   },
