--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "lint": "npx eslint src/",
     "format": "npx eslint src/ --fix",
-    "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit status"
+    "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit status",
+    "postinstall": "node scripts/postNodeInstallScript.js"
   },
   "engines": {
     "node": ">=18.x"
@@ -21,9 +22,9 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.13.0",
+    "@discordjs/voice": "^0.14.0",
     "cheerio": "^1.0.0-rc.12",
-    "discord.js": "^14.6.0",
+    "discord.js": "^14.7.0",
     "dotenv": "^16.0.3",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
