--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "lint": "npx eslint src/",
-    "format": "npx eslint src/ --fix",
+    "format": "npx eslint src/ --fix && npx eslint tests/ --fix",
     "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit status",
     "postinstall": "node scripts/postNodeInstallScript.js"
   },
@@ -50,10 +50,10 @@
     "ytsr": "^3.8.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
-    "eslint": "^8.23.1",
+    "@babel/eslint-parser": "^7.19.1",
+    "eslint": "^8.29.0",
     "eslint-config-google": "^0.14.0",
-    "jest": "^29.0.3",
+    "jest": "^29.3.1",
     "semistandard": "*"
   }
 }
