--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "ffmpeg-static": "~5.0.1",
+    "ffmpeg-static": "^5.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "genius-lyrics": "^4.4.0",
     "googleapis": "^109.0.1",
