--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
     "spotify-url-info": "^3.1.10",
+    "spotify-web-api-node": "^5.0.2",
     "twitch-m3u8": "^1.1.5",
     "unpipe": "^1.0.0",
     "xml2js": "^0.4.23",
