--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./src/index.js",
     "dev": "node --trace-warnings ./src/index.js --dev",
     "dev-test": "node --trace-warnings ./src/index.js --dev --test 987120641549430824",
-    "pm2": "echo running pm2 script...\npm2 start src/index.js --watch --name vibe",
+    "pm2": "NAME=vibe2; pm2 delete $NAME && echo running pm2 script...\npm2 start src/index.js --name $NAME && node ./scripts/pm2-monitor.js $NAME",
     "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "lint": "npx eslint src/",
@@ -30,6 +30,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "genius-lyrics": "^4.4.0",
     "googleapis": "^109.0.1",
+    "got": "^12.5.3",
     "isomorphic-unfetch": "^3.1.0",
     "leven": "~3.1.0",
     "libsodium": "^0.7.10",
@@ -38,6 +39,8 @@
     "node-gyp": "^9.3.0",
     "node-os-utils": "^1.3.7",
     "opusscript": "^0.0.8",
+    "pm2": "^5.2.2",
+    "request": "^2.88.2",
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
     "spotify-url-info": "^3.1.10",
