--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "lint": "npx eslint src/",
     "format": "npx eslint src/ --fix && npx eslint tests/ --fix",
-    "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit status",
+    "release": "npx eslint src/ --fix\nnpm i --package-lock-only\ngit add package*\ngit status",
     "postinstall": "node scripts/postNodeInstallScript.js"
   },
   "engines": {
@@ -30,7 +30,6 @@
     "fluent-ffmpeg": "^2.1.2",
     "genius-lyrics": "^4.4.0",
     "googleapis": "^109.0.1",
-    "got": "^12.5.3",
     "isomorphic-unfetch": "^3.1.0",
     "leven": "~3.1.0",
     "libsodium": "^0.7.10",
