--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "discordbotz",
-  "version": "8.4.5",
+  "version": "8.4.6",
   "description": "A discord playback bot with a UI.",
   "main": "src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "node --trace-warnings ./src/index.js --dev",
     "dev-test": "node --trace-warnings ./src/index.js --dev --test 987120641549430824",
-    "pm2": "bash ./scripts/pm2-startup.bash vibe",
+    "pm2": "bash ./scripts/pm2-startup.bash vibe2",
     "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "lint": "npx eslint src/",
