--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "lint": "npx eslint src/",
-    "format": "npx eslint src/ --fix && npx eslint tests/ --fix",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "release": "bash ./scripts/release.bash",
     "postinstall": "node scripts/postNodeInstallScript.js"
   },
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "jest": "^29.3.1",
-    "semistandard": "*",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4"
   }
 }
