--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "tsc && node ./dist/index.js",
     "dev": "tsc && node --trace-warnings ./dist/index.js --dev",
-    "dev-test": "node --trace-warnings ./src/index.js --dev --test 987120641549430824",
+    "dev-test": "node --trace-warnings ./dist/index.js --dev --test 987120641549430824",
     "pm2": "bash ./scripts/pm2-startup.bash vibe",
-    "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start src/index.js --name vibeDEV -- --dev && pm2 monit",
+    "pm2-dev": "pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "release": "bash ./scripts/release.bash",
