chore: add sourcemap support for dev environments

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "tsc && node ./dist/index.js",
-    "dev": "tsc && node --trace-warnings ./dist/index.js --dev",
-    "dev-test": "tsc && node --trace-warnings ./dist/index.js --dev --test 987120641549430824",
+    "dev": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/index.js --dev",
+    "dev-test": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/index.js --dev --test 987120641549430824",
     "pm2": "tsc && bash ./scripts/pm2-startup.bash vibe",
-    "pm2-dev": "tsc && pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/index.js --name vibeDEV -- --dev && pm2 monit",
+    "pm2-dev": "tsc -p tsconfig.dev.json && pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "release": "bash ./scripts/release.bash",
@@ -54,6 +54,7 @@
   "devDependencies": {
     "jest": "^29.3.1",
     "prettier": "^2.8.3",
+    "source-map-support": "^0.5.21",
     "typescript": "^4.9.4"
   }
 }
