--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@discordjs/voice": "^0.15.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@types/fluent-ffmpeg": "^2.1.20",
+    "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
@@ -40,7 +41,6 @@
     "node-os-utils": "^1.3.7",
     "opusscript": "^0.0.8",
     "pm2": "^5.2.2",
-    "request": "^2.88.2",
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
     "spotify-url-info": "^3.2.3",
