--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@hoursofza/djs-common": "^1.0.8",
     "@types/fluent-ffmpeg": "^2.1.20",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
