--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-test": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/index.js --dev --test 987120641549430824",
     "pm2": "bash ./scripts/pm2-startup.bash vibe",
     "pm2-dev": "tsc -p tsconfig.dev.json && pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/index.js --name vibeDEV -- --dev && pm2 monit",
-    "test": "jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
+    "test": "tsc && jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "release": "bash ./scripts/release.bash",
     "postinstall": "node scripts/postNodeInstallScript.js && bash scripts/install-hooks.bash"
@@ -23,7 +23,7 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@hoursofza/djs-common": "~1.0.8",
+    "@hoursofza/djs-common": "~1.1.1",
     "@types/fluent-ffmpeg": "^2.1.20",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
@@ -46,16 +46,18 @@
     "soundcloud-downloader": "^1.0.0",
     "spotify-url-info": "^3.2.3",
     "spotify-web-api-node": "^5.0.2",
+    "ts-jest": "^29.1.0",
     "twitch-m3u8": "^1.1.5",
     "unpipe": "^1.0.0",
     "xml2js": "^0.4.23",
-    "ytdl-core": "^4.11.3",
+    "ytdl-core": "^4.11.4",
     "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.3.0",
-    "ytsr": "^3.8.1"
+    "ytsr": "^3.8.2"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.3",
     "source-map-support": "^0.5.21",
     "typescript": "^5.0.2"
