--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pm2-dev": "tsc -p tsconfig.dev.json && pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/index.js --name vibeDEV -- --dev && pm2 monit",
     "test": "tsc && jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "release": "bash ./scripts/release.bash",
+    "release:patch": "npm run test && npm version patch -m \"chore(release): %s\"",
+    "release:minor": "npm run test && npm version minor -m \"chore(release): %s\"",
     "postinstall": "node scripts/postNodeInstallScript.js && bash scripts/install-hooks.bash"
   },
   "engines": {
