--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "tsc && node ./dist/index.js",
-    "dev": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/index.js --dev",
-    "dev-test": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/index.js --dev --test 987120641549430824",
+    "dev": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/src/main/index.js --dev",
+    "dev-test": "tsc -p tsconfig.dev.json && node -r source-map-support/register dist/src/main/index.js --dev --test 987120641549430824",
     "pm2": "bash ./scripts/pm2-startup.bash vibe",
-    "pm2-dev": "tsc -p tsconfig.dev.json && pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/index.js --name vibeDEV -- --dev && pm2 monit",
-    "test": "tsc && jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
+    "pm2-dev": "tsc -p tsconfig.dev.json && pm2 delete vibeDEV && echo running pm2 script...\npm2 start dist/src/main/index.js --name vibeDEV -- --dev && pm2 monit",
+    "test": "tsc -p tsconfig.dev.json && jest --detectOpenHandles --setupFiles dotenv/config --forceExit",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "release:patch": "npm run test && npm version patch -m \"chore(release): %s\"",
     "release:minor": "npm run test && npm version minor -m \"chore(release): %s\"",
@@ -61,6 +61,6 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.3",
     "source-map-support": "^0.5.21",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   }
 }
