refactor: edit channel.json to config.json

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "check-in-guild": "824013986977546343",
   "check-in-voice": "839643770986561607",
   "check-in-voice-2": "1011115175740452865",
-  "dm": "993752347782164530"
+  "dm": "993752347782164530",
+  "devPrefix": "="
 }
