--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "twitch-m3u8": "^1.1.5",
     "unpipe": "^1.0.0",
     "xml2js": "~0.5.0",
-    "ytdl-core": "~4.11.4",
-    "ytdl-core-discord": "~1.3.1",
+    "ytdl-core": "^4.11.5",
+    "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.3.0",
     "ytsr": "^3.8.2"
   },
