--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/fluent-ffmpeg": "^2.1.20",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
-    "discord.js": "^14.12.1",
+    "discord.js": "~14.13.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
     "fluent-ffmpeg": "^2.1.2",
@@ -45,7 +45,7 @@
     "pm2": "^5.2.2",
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
-    "spotify-url-info": "^3.2.3",
+    "spotify-url-info": "^3.2.6",
     "spotify-web-api-node": "^5.0.2",
     "ts-jest": "^29.1.0",
     "twitch-m3u8": "^1.1.5",
