--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-gyp": "^9.3.0",
     "node-os-utils": "^1.3.7",
     "opusscript": "^0.0.8",
+    "play-dl": "^1.9.6",
     "pm2": "^5.2.2",
     "scdl-core": "^1.1.0",
     "soundcloud-downloader": "^1.0.0",
