--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@hoursofza/djs-common": "~1.1.1",
+    "@hoursofza/djs-common": "~1.1.3",
     "@types/fluent-ffmpeg": "^2.1.20",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
@@ -62,6 +62,6 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.3",
     "source-map-support": "^0.5.21",
-    "typescript": "^5.0.4"
+    "typescript": "~5.2.2"
   }
 }
